retrieving shared workouts + added fa icons to UI

--- a/src/app/component/calendar/calendar.html
+++ b/src/app/component/calendar/calendar.html
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col"><h1>{{month.name}} {{month.year}}</h1></div>
   <div class="col">
-    <button type="button" class="btn btn-primary pull-right" (click)="toggleToday()">Today</button>
+    <button type="button" class="btn btn-primary pull-right" (click)="toggleToday()" style="margin-left: 15px;">Today</button>
     <div class="btn-group pull-right">
-      <button type="button" class="btn btn-primary" (click)="goBackMonth()"></button>
+      <button type="button" class="btn btn-primary" (click)="goBackMonth()"><</button>
       <button type="button" class="btn btn-primary" (click)="goNextMonth()">></button>
     </div>
   </div>
