--- a/src/app/component/exercise/exercise.html
+++ b/src/app/component/exercise/exercise.html
@@ -2,7 +2,9 @@
     <div class="form-inline" style="margin-top: 10px;" *ngIf="!workout.isShared">
         <input type="text" name="title" class="form-control" placeholder="Add Excercise..." style="width:80%; float: right;"
             id="add_exercise_name">
-        <input type="button" value="+" class="btn btn-primary" (click)="add()" style="margin-left: 10px; margin-right: 10px; float: left;">
+        <button type="button" class="btn btn-primary" (click)="add()" style="margin-left: 10px; margin-right: 10px; float: left;">
+            <i class="fas fa-plus"></i>
+        </button>
     </div>
 </form>
 
@@ -29,12 +31,20 @@
                         [disabled]="true" [(ngModel)]="exercise.reps"></td>
 
                 <td id="{{'e_edit_delete_' + exercise._id}}" *ngIf="!workout.isShared">
-                    <input type="button" value="Edit" class="btn btn-primary" (click)="edit(exercise)" [disabled]="workout.isShared">
-                    <input type="button" value="Delete" class="btn btn-danger" (click)="delete(exercise)" style="margin-left: 10px;" [disabled]="workout.isShared">
+                    <button type="button" value="Edit" class="btn btn-primary" (click)="edit(exercise)">
+                        <i class="far fa-edit"></i>
+                    </button>
+                    <button type="button" value="Delete" class="btn btn-danger" (click)="delete(exercise)" style="margin-left: 10px;">
+                        <i class="fa fa-trash"></i>
+                    </button>
                 </td>
                 <td id="{{'e_save_cancel_' + exercise._id}}" class="workout-hidden" *ngIf="!workout.isShared">
-                    <input type="button" value="Save" class="btn btn-primary" (click)="save(exercise)" [disabled]="workout.isShared">
-                    <input type="button" value="Cancel" class="btn btn-primary" (click)="cancel(exercise)" style="margin-left: 10px;" [disabled]="workout.isShared">
+                    <button type="button" value="Save" class="btn btn-primary" (click)="save(exercise)">
+                        <i class="far fa-save"></i>
+                    </button>
+                    <button type="button" value="Cancel" class="btn btn-primary" (click)="cancel(exercise)" style="margin-left: 10px;">
+                        <i class="fas fa-times"></i>
+                    </button>
                 </td>
             </tr>
         </tbody>
