--- a/src/app/component/shareModal/shareModal.html
+++ b/src/app/component/shareModal/shareModal.html
@@ -12,7 +12,7 @@
           <table class='table'>
             <thead>
             <tr>
-              <th>Friends</th>
+              <th>Share workout</th>
               <th></th>
             </tr>
             </thead>
@@ -27,7 +27,6 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
