--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -35,7 +35,7 @@
             <h5 class="card-title">Workouts This Week:</h5>
             <ul class="list-group">
                 <li *ngFor="let date of next7Dates" class="list-group-item">
-                    <span>{{ getDay(date) }}</span>: <span>{{ getWorkout(pTestUser.id, date) }}</span>
+                    <span>{{ getDay(date) }}</span>: <span>{{ getWorkout(pTestUser._id, date) }}</span>
                 </li>
             </ul>
         </div>
