--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -35,7 +35,7 @@
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
     <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
-      <!--<li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="notifications"><i class="fa fa-bell fa-fw fa-lg" [ngClass]="{'active': notifications.length > 0}"></i></a></li>-->
+      <li class="nav-item order-2 order-md-1" [ngClass]="{'active': notifications.length > 0}"><a href="#" class="nav-link" title="notifications"><i class="fa fa-bell fa-fw fa-lg"></i></a></li>
       <li class="nav-item order-2 order-md-1"><a href="#" class="nav-link" title="settings"><i class="fa fa-cog fa-fw fa-lg"></i></a></li>
       <li class="dropdown order-1" *ngIf="!(userSession?.user?.username)">
         <button type="button" id="dropdown-login" data-toggle="dropdown" class="btn btn-outline-secondary dropdown-toggle">Login <span class="caret"></span></button>
