--- a/src/app/component/workoutModal/workoutModal.html
+++ b/src/app/component/workoutModal/workoutModal.html
@@ -27,8 +27,14 @@
         <p>{{workout?.description}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        
+        <button type="button" class="btn btn-primary" (click)="view()" data-dismiss="modal"><i class="fas fa-eye"></i></button>
+        
+        <button type="button" value="Delete" class="btn btn-danger" style="margin-left: 10px;" data-dismiss="modal"
+                                        (click)="delete()">
+                                        <i class="fa fa-trash"></i>
+                                    </button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i></button>
       </div>
     </div>
   </div>
