--- a/src/app/containers/home/home.html
+++ b/src/app/containers/home/home.html
@@ -1,2 +1,4 @@
-here is some homepage information
-<calendar></calendar>
+<div style="margin: 200px;">
+    <h1>Welcome to FitPals</h1>
+    <h3>Sign up!</h3>
+</div>
