added weight logging for workouts

--- a/src/app/component/calendar/calendar.html
+++ b/src/app/component/calendar/calendar.html
@@ -24,4 +24,4 @@
     </tbody>
   </table>
 </div>
-<workout-modal [workout]="workout" (deleteWorkout)="deleteWorkoutForDay($event)"></workout-modal>
+<workout-modal [workout]="workout" (deleteWorkout)="deleteWorkoutForDay($event)" [dayId]="dayId"></workout-modal>
