--- a/src/app/component/workoutModal/workoutModal.html
+++ b/src/app/component/workoutModal/workoutModal.html
@@ -21,7 +21,7 @@
             <tr *ngFor="let exercise of workout?.exercises">
               <td>{{exercise?.name}}</td>
               <td>{{exercise?.sets}} X {{exercise?.reps}}</td>
-              <td>lbs: <input id="exercise_weight" type="number" value="{{getWeight(exercise)}}" (change)="updateWeight(exercise._id, exercise._id)"> </td>
+              <td>lbs: <input id="{{'e_w_' + exercise._id}}" type="number" value="{{getWeight(exercise)}}" (change)="updateWeight(exercise)"> </td>
             </tr>
             </tbody>
           </table>
