added icon to navbar + fa changes

--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -106,7 +106,7 @@
                                     </button>
                                     <button type="button" value="Share" class="btn btn-primary float-right" (click)="showShareModal(workout)"
                                         style="margin-left: 10px;" *ngIf="!workout.isShared">
-                                        <fa name="share"></fa>
+                                        <fa name="share-square"></fa>
                                         
                                     </button>
                                     <button type="button" value="Add to calendar" class="btn btn-primary float-right"
