--- a/src/app/component/workoutModal/workoutModal.html
+++ b/src/app/component/workoutModal/workoutModal.html
@@ -30,13 +30,13 @@
       </div>
       <div class="modal-footer">
         
-        <button type="button" class="btn btn-primary" (click)="view()" data-dismiss="modal"><i class="fas fa-eye"></i></button>
+        <button type="button" class="btn btn-primary" (click)="view()" data-dismiss="modal"><fa name="eye"></fa></button>
         
         <button type="button" value="Delete" class="btn btn-danger" style="margin-left: 10px;" data-dismiss="modal"
                                         (click)="delete()">
-                                        <i class="fa fa-trash"></i>
+                                        <fa name="trash"></fa>
                                     </button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i></button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"><fa name="times"></fa></button>
       </div>
     </div>
   </div>
