--- a/src/app/component/exercise/exercise.html
+++ b/src/app/component/exercise/exercise.html
@@ -42,7 +42,7 @@
                     <button type="button" value="Save" class="btn btn-primary" (click)="save(exercise)">
                         <fa name="save"></fa>
                     </button>
-                    <button type="button" value="Cancel" class="btn btn-primary" (click)="cancel(exercise)" style="margin-left: 10px;">
+                    <button type="button" value="Cancel" class="btn btn-secondary" (click)="cancel(exercise)" style="margin-left: 10px;">
                         <fa name="times"></fa>
                     </button>
                 </td>
