--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -94,7 +94,7 @@
                                     <button type="button" value="Save" class="btn btn-primary" (click)="save(workout)">
                                         <fa name="save"></fa>
                                     </button>
-                                    <button type="button" value="Cancel" class="btn btn-primary" (click)="cancel(workout)"
+                                    <button type="button" value="Cancel" class="btn btn-secondary" (click)="cancel(workout)"
                                         style="margin-left: 10px;">
                                         <fa name="times"></fa>
                                     </button>
