--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -107,7 +107,7 @@
                                     <button type="button" value="Share" class="btn btn-primary float-right" (click)="showShareModal(workout)"
                                         style="margin-left: 10px;" *ngIf="!workout.isShared">
                                         <fa name="share-square"></fa>
-                                        
+
                                     </button>
                                     <button type="button" value="Add to calendar" class="btn btn-primary float-right"
                                         (click)="showCalModal(workout)">
@@ -124,7 +124,7 @@
         </div>
 
 
-        <workout-share-modal [workout]="workout" [user]="currentUser" [friends]="friends"></workout-share-modal>
+        <workout-share-modal [workout]="workout" [user]="currentUser" [friends]="friends" (refresh)="refreshWorkout(workout?._id)"></workout-share-modal>
         <workout-cal-modal [workout]="workout"></workout-cal-modal>
 
     </form>
