made the profile page the home page

--- a/src/app/containers/home/home.html
+++ b/src/app/containers/home/home.html
@@ -1,4 +1,7 @@
-<div style="margin: 200px;">
+
+
+<app-profile *ngIf="loggedIn"></app-profile>
+<div style="margin: 200px;" *ngIf="!loggedIn">
     <h1>Welcome to FitPals</h1>
     <h3>Sign up!</h3>
 </div>
