--- a/src/app/component/workout/workout.html
+++ b/src/app/component/workout/workout.html
@@ -82,37 +82,44 @@
                         <div class="panel-footer bg-light text-white" style="overflow: auto; padding: 10px;">
                             <div class="clear-fix">
                                 <div id="{{'w_edit_delete_' + workout._id}}" class="float-left" *ngIf="workout.owner == currentUser._id">
-                                    <button type="button" value="Edit" class="btn btn-primary" (click)="edit(workout)">
+                                    <button type="button" title="Edit Workout" class="btn btn-primary" (click)="edit(workout)">
                                         <fa name="edit"></fa>
                                     </button>
-                                    <button type="button" value="Delete" class="btn btn-danger" style="margin-left: 10px;"
+                                    <button type="button" title="Delete Workout" class="btn btn-danger" style="margin-left: 10px;"
                                         (click)="delete(workout)">
                                         <fa name="trash"></fa>
                                     </button>
                                 </div>
                                 <div id="{{'w_save_cancel_' + workout._id}}" class="workout-hidden float-left" *ngIf="workout.owner == currentUser._id">
-                                    <button type="button" value="Save" class="btn btn-primary" (click)="save(workout)">
+                                    <button type="button" title="Save Change" class="btn btn-primary" (click)="save(workout)">
                                         <fa name="save"></fa>
                                     </button>
-                                    <button type="button" value="Cancel" class="btn btn-secondary" (click)="cancel(workout)"
+                                    <button type="button" title="Cancel Change" class="btn btn-secondary" (click)="cancel(workout)"
                                         style="margin-left: 10px;">
                                         <fa name="times"></fa>
                                     </button>
                                 </div>
                                 <div class="float-right">
-                                    <button type="button" value="Clone" class="btn btn-primary float-right" (click)="clone(workout)"
+                                    <button type="button" title="Clone Workout" class="btn btn-primary float-right" (click)="clone(workout)"
                                         style="margin-left: 10px;">
                                         <fa name="copy"></fa>
                                     </button>
-                                    <button type="button" value="Share" class="btn btn-primary float-right" (click)="showShareModal(workout)"
+                                    <button type="button" title="Share Workout" class="btn btn-primary float-right" (click)="showShareModal(workout)"
                                         style="margin-left: 10px;" *ngIf="!workout.isShared">
                                         <fa name="share-square"></fa>
 
                                     </button>
-                                    <button type="button" value="Add to calendar" class="btn btn-primary float-right"
+                                    <button type="button" class="btn btn-primary float-right" title="View Owner Profile"
+                                        (click)="viewUserProfile(workout.owner)" *ngIf="workout.isShared" style="margin-left: 10px;">
+                                        <fa name="user"></fa>
+                                    </button>
+
+                                    <button type="button" title="Add to calendar" class="btn btn-primary float-right"
                                         (click)="showCalModal(workout)">
                                         <fa name="calendar"></fa>
                                     </button>
+
+                                    
                                 </div>
                             </div>
                         </div>
