--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -3,12 +3,12 @@
         <!-- TODO: REPLACE WITH PROFILE PHOTO-->
         <img class="card-img-top" src="http://www.carderator.com/assets/avatar_placeholder_small.png" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">{{ pTestUser.firstName}} {{pTestUser.lastName}}</h5>
+            <h5 class="card-title">{{ userToDisplay.firstName}} {{userToDisplay.lastName}}</h5>
             <ul>
-                <li><span>Email: </span> {{pTestUser.email}}</li>
+                <li><span>Email: </span> {{userToDisplay.username}}</li>
                 <!--TODO FIGURE OUT HOW TO GET FOLLOW INFORMATION IN HERE-->
-                <li>Following: 35</li>
-                <li>Followers: 87</li>
+                <li>Friends: {{userToDisplay.friends.length}}</li>
+                
             </ul>
         </div>
     </div>
@@ -43,7 +43,7 @@
             <!--TODO: IMPLEMENT THE WORKOUT AND CALENDAR SERVICES HERE-->
             <ul class="list-group">
                 <li *ngFor="let date of next7Dates" class="list-group-item">
-                    <span>{{ getDay(date) }}</span>: <span>{{ getWorkout(pTestUser._id, date) }}</span>
+                    <span>{{ getDay(date) }}</span>: <span>{{ getWorkout(userToDisplay._id, date) }}</span>
                 </li>
             </ul>
         </div>
