--- a/src/app/component/shareModal/shareModal.html
+++ b/src/app/component/shareModal/shareModal.html
@@ -21,8 +21,8 @@
               <td>{{friend?.firstName}} {{friend?.lastName}} ({{friend?.username}})</td>
               <!--<td><input type="checkbox" (change)="share(friend, $event.target.checked)" [checked]="isShared(friend)"></td>-->
               <td class="text-center">
-                <label class="control-label">Currently
-                  <button type="button" class="btn btn-primary" (click)="share(friend, !isShared(friend))">{{isShared(friend)?'':'Not '}}Sharing</button>
+                <label class="control-label">
+                  <button type="button" class="btn btn-primary" (click)="share(friend, !isShared(friend))">{{isShared(friend)?'Unshare':'Share'}}</button>
                 </label>
               </td>
             </tr>
